fix: remove path injection vulnerability